WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58891
WebKit2: Typo fix in WebPopupMenu::Type.
https://bugs.webkit.org/show_bug.cgi?id=58891
Summary
WebKit2: Typo fix in WebPopupMenu::Type.
Andreas Kling
Reported
2011-04-19 06:34:28 PDT
WebPopupMenu::Seperator should be WebPopupMenu::Separator.
Attachments
Proposed patch
(3.06 KB, patch)
2011-04-19 06:39 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-04-19 06:39:24 PDT
Created
attachment 90193
[details]
Proposed patch
Andreas Kling
Comment 2
2011-04-19 07:35:37 PDT
Comment on
attachment 90193
[details]
Proposed patch Clearing flags on attachment: 90193 Committed
r84253
: <
http://trac.webkit.org/changeset/84253
>
Andreas Kling
Comment 3
2011-04-19 07:35:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug