2011-04-19  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Antonio Gomes.

        WebKit2: Typo fix in WebPopupMenu::Type.
        https://bugs.webkit.org/show_bug.cgi?id=58891

        Fixed a typo, Seperator -> Separator.
        Also removed m_ prefix on an argument variable name.

        * Shared/WebPopupItem.h:
        * UIProcess/mac/WebPopupMenuProxyMac.mm:
        (WebKit::WebPopupMenuProxyMac::populate):
        * WebProcess/WebCoreSupport/WebPopupMenu.cpp:
        (WebKit::WebPopupMenu::populateItems):


Canonical link: https://commits.webkit.org/73993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84253 268f45cc-cd09-0410-ab3c-d52691b4dbfc